# ta

./: .dockerignore  .gitignore  captain-definition  docker-compose.yml  postgresql.conf  postgresql2.conf  pyproject.toml  requirements.txt
dockerfiles/: Dockerfile  Dockerfile-redis
ta/: asgi.py  settings.py  urls.py  wsgi.py
turnover_atlas/: apps.py  models.py  ordering_filter.py  pagination.py  serializers.py  utils.py  validation.py  views.py  viewsets.py
turnover_atlas/management/commands/: calculate_model_for_data.py  extract_acc_gene_map.py  load_model_params.py  load_protein_sequence.py  load_sample_metadata.py  load_turnover_data.py
turnover_atlas/migrations/: 0001_initial.py  0002_accessionidmap.py  0003_samplegroupmetadata.py  0004_modelparameters.py  0005_modelparameters_k_pool_turnoverdata_tau_model.py  0006_alter_turnoverdata_protein_group.py  0007_alter_turnoverdata_genes.py  0008_proteinsequence.py  0009_session.py  0010_session_name.py  0011_rename_file_session_details.py  0012_session_created.py
